[package]
name = "rusty_colonies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
tokio = "1.22.0"
futures = "0.3"
names = { version = "0.14.0", default-features = false }
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }


